--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -28,7 +28,7 @@ tasks:
         fi
       fi
   - init: npm install
-    command: npm run setup && npm run dev
+    command: npm run dev
 
 vscode:
   extensions:
